--- a/SchoolManagementSystem.csproj
+++ b/SchoolManagementSystem.csproj
@@ -375,6 +375,7 @@
     <Content Include="Views\Lecturers\Details.cshtml" />
     <Content Include="Views\Lecturers\Edit.cshtml" />
     <Content Include="Views\Lecturers\Index.cshtml" />
+    <Content Include="Views\Enrollments\_enrollmentPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
